# safe-launch

./: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml
.agents/: architect.md  config-validator.md  db-migrator.md  litestar-developer.md  model-builder.md  test-writer.md
app/: main.py
app/api/controllers/: health.py  history.py  image_review.py  rag.py  text_review.py
app/core/: constants.py  database.py  exception_handlers.py  exceptions.py  logging.py  redis.py
app/core/config/: settings.py
app/models/: __init__.py  review_record.py
app/modules/image_review/: external_detector.py  validator.py
app/modules/rag/: embedding.py  qdrant_client.py  reranker.py  retriever.py
app/modules/text_review/: keyword.py  llm_judge.py  rag_bridge.py
app/schemas/: __init__.py  common.py  health.py  rag.py  review.py
app/services/: review_service.py
app/services/repos/: review_repo.py
app/web/: __init__.py
app/web/controllers/: __init__.py  pages.py
app/web/templates/: base.html  dashboard.html  history.html  review.html
data/keywords/: political.json  pornographic.json  violence.json
data/regulations/: sample.json
migrations/: env.py
migrations/versions/: 0f36e695a78c_init.py
scripts/: seed_precedents.py  start.ps1  start.sh
tests/: conftest.py
tests/factories/: review_factory.py
tests/integration/: conftest.py
tests/integration/test_api/: test_health.py
tests/unit/: conftest.py
tests/unit/test_api/: test_text_review.py
tests/unit/test_core/: test_exception_handlers.py
tests/unit/test_modules/: test_image_validator.py  test_llm_judge.py  (+1 more)
(+3 files in other folders)
