[project]
name = "safe-launch"
version = "0.1.0"
description = "游戏预发布内容审核系统"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "safe-launch-team" }]

dependencies = [
    "litestar>=2.8,<3.0",
    "sqlalchemy[asyncio]>=2.0,<3.0",
    "asyncpg>=0.29",
    "pydantic>=2.0,<3.0",
    "pydantic-settings>=2.0,<3.0",
    "redis[hiredis]>=5.0,<6.0",
    "qdrant-client>=1.9,<2.0",
    "httpx>=0.27",
    "alembic>=1.13",
    "openai>=1.0",
    "greenlet>=3.0",
    "python-dotenv>=1.0",
    "uvicorn>=0.51.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "pytest-mock>=3.12",
    "factory-boy>=3.3",
    "ruff>=0.3",
    "mypy>=1.8",
    "httpx>=0.27",
]

[project.scripts]
server = "app.main:run_server"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.mypy]
strict = true
python_version = "3.12"
exclude = ["migrations/", "tests/"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

[tool.coverage.run]
source = ["app"]
omit = ["tests/*", "migrations/*", "app/__init__.py"]

[tool.coverage.report]
exclude_also = [
    "def __repr__",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
